      addressing mode without symbol if segment register had no assume, segment
      was 32-bit and default word size was 16-bit only; see offset14.asm.
   -  <loadds> prologue argument was ignored if procedure had no parameters and
      locals; see loadds.asm.
   -  text macro expansion might have caused a buffer overflow if expanded line
      got too long.

   Other changes:
   -  error "too many segments/sections defined..." emitted for omf and coff
      if the number of segments/sections cannot be handled by those formats.
   -  warning "64-bit label referenced with 32-bit fixup", introduced in v2.14,
      will be emitted at level 4 only if the code referencing the label isn't
      64-bit.
   -  format coff: warning "Output format doesn't support anonymous fixups..."
      displayed if a segment override other than FLAT: is used without symbol.
   -  .model flat directive in 64-bit is now rejected in omf format.
   -  warning displayed in binary formats if a linker directive section is
      detected.
   -  warning displayed for PUSHW/PUSHD if operand is a segment register and
      the size suffix doesn't match the current mode; see pushwsr.asm and
      pushdsr.asm

   20.12.2020, v2.14:

   Bugfixes:
   -  regression in v2.13: if a not yet defined segment was added to a group,
      it got the current offset size, which caused an error if this wasn't the
      offset size when the segment was created; see group5.asm.
   -  there was still the possibility that segments with different offset 
      sizes were added to the same group; see group6.asm.
   -  string operation MOVSx with operands: if destination got an override 
      (ES:), a source without override was rejected; see string4.asm.
   -  string operation MOVSx with operands: destination with override 
      != ES wasn't rejected; see string5.asm.
   -  string operations with symbolic memory operands did ignore assumes, thus
      no segment prefix was created; see string8.asm.